# swift-mt940

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: converter.py  main.py
src/static/: script.js
src/templates/: index.html
